--- a/setup.cfg
+++ b/setup.cfg
@@ -4,9 +4,8 @@ version = 0.1.1
 description = CLI tool to figure out the time somewhere else
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/seanbreckenridge/time_in
-author = Sean Breckenridge
-author_email = "seanbrecke@gmail.com"
+url = https://github.com/purarue/time_in
+author = purarue
 license = MIT
 license_files = LICENSE
 classifiers =
