fix addopts ini_options

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,7 @@ warn_return_any = true
 warn_unreachable = true
 
 [tool.pytest.ini_options]
-addopts = ["--verbose", "tests"]
+addopts = "--verbose tests"
 
 [tool.setuptools.packages.find]
 include = ["time_in"]
